[project]
name = "autounittestpro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "astroid>=3.0.0",
    "jinja2>=3.0.0",
]
